More personal information

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h5><span id="timezone"></span></h5>
                 <p><span id="utc_offset"></span><span id="abbreviation"></span></p>
             </div>
-            <button class="btn">Get a Quote</button>
+            <button class="btn">Contact</button>
         </div>
 
     </nav>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="hero__socials">
-            <a href="#"><i class="ri-instagram-line"></i></a>
+            <a href=""><i class="ri-instagram-line"></i></a>
             <a href="#"><i class="ri-dribbble-line"></i></a>
             <a href="#"><i class="ri-linkedin-box-line"></i></a>
             <a href="#"><i class="ri-youtube-line"></i></a>
@@ -169,58 +169,55 @@
                 <div class="category__header">
                     <div class="category__title">
                         <i class="ri-group-2-line"></i>
-                        <h4>Website Development</h4>
+                        <h4>Web and Application Development</h4>
                     </div>
                     <div class="category__desc">
-                        <p>End-to-end development of responsive websites that look great on all devices, with a focus on
-                            performance and aesthetics.</p>
+                        <p>Full-cycle development of responsive websites and mobile applications, focused on clean design, 
+                            efficient functionality, and seamless user experience across all devices.</p>
                         <a href="#"><i class="ri-share-circle-line"></i></a>
                     </div>
                 </div>
 
                 <div class="category__projects">
                     <div class="project-card">
-                        <img src="assets/item-5.png" alt="NFT Landing" class="project-card__image">
+                        <img src="assets/proj1.png" alt="NFT Landing" class="project-card__image">
                         <div class="project-card__info">
-                            <h5>NFT Landing</h5>
-                            <p>August 2023</p>
+                            <h5>Deep Learning and Image Classification</h5>
+                            <p>October 2021</p>
                         </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
+                        <p class="project-card__desc">Developed a mobile app using a Convolutional Neural Network for image classification, enabling accurate image
+                            description through training and reference to parent classes. The process involves training a classification
+                            model by providing a variety of images that the user’s own image can reference to.</p>
+                        <button class="btn">View</button>
+                    </div>
+                    <div class="project-card">
+                        <img src="assets/proj2.png" alt="Music Platform" class="project-card__image">
+                        <div class="project-card__info">
+                            <h5>MunchedUp</h5>
+                            <p>March 2021</p>
+                        </div>
+                        <p class="project-card__desc">Developed a university-based food delivery website with a focus on security and data protection, addressing
+                            XSS, SSL, and SQL vulnerabilities, utilizing WAMP servers, cPanel, and GoDaddy..</p>
                         <button class="btn">View Live Demo</button>
                     </div>
                     <div class="project-card">
-                        <img src="assets/item-6.png" alt="Music Platform" class="project-card__image">
+                        <img src="assets/proj3.png" alt="Crypto Market" class="project-card__image">
                         <div class="project-card__info">
-                            <h5>Music Platform</h5>
+                            <h5>Citius</h5>
                             <p>August 2023</p>
                         </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                    <div class="project-card">
-                        <img src="assets/item-7.png" alt="Crypto Market" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Crypto Market</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
+                        <p class="project-card__desc">Developed a minimalist run-tracking app for Android, focusing on simplicity and efficient run logging. 
+                            Built in Java, it provides a streamlined experience for runners who want to log their daily workouts. Users can record and review essential running metrics, such as distance, time, and pace, all stored in an easy-to-access daily log.</p>
                         <button class="btn">View Live Demo</button>
                     </div>
                     <div class="project-card">
                         <img src="assets/item-8.png" alt="Jobs Platform" class="project-card__image">
                         <div class="project-card__info">
-                            <h5>Jobs Platform</h5>
+                            <h5>Sandbox Shoe Store</h5>
                             <p>August 2023</p>
                         </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
+                        <p class="project-card__desc"> ASP.NET MVC application with a surrogate key system for organizing products, MDF for database tables, and PHP for server-side tasks. 
+                            It’s designed as a simple, structured environment to test e-commerce features like product management and customer transactions..</p>
                         <button class="btn">View Live Demo</button>
                     </div>
                 </div>
@@ -254,40 +251,32 @@
                 <img class="job__logo" src="https://media.licdn.com/dms/image/v2/C560BAQEDH0isb4Fzlg/company-logo_200_200/company-logo_200_200/0/1657030304054/mercuryhealthcare_co_logo?e=1739404800&v=beta&t=MpQr4bdiBgrmXgBI1nkr7PiyGq_hhAH5305NVmv4YAQ" 
                      alt="Mercury Logo">
                 <div class="job__info">
-                    <h5>Web Developer at <span>Associated Students Incorporated, CPP</span></h5>
-                    <p>October 2020 – January 2024</p>
+                    <h5>Junior Web Engineer at <span>Mercury Healthcare</span></h5>
+                    <p>May 2022 – November 2022</p>
                 </div>
             </div>
         </div>
 
         <div class="career__awards">
-            <h3>Awards & Recognition</h3>
+            <h3>Education</h3>
             <div class="award">
                 <div>
-                    <i class="ri-medal-fill"></i>
+                    <img class="job__logo" src="https://www.cpp.edu/brand/img/thumb-vertical-stacked-bw.jpg" 
+                    alt="CPP Logo BW">
                     <div class="award__info">
-                        <h5>Fron-Dev of the Year at <span>Dev Awards</span></h5>
-                        <p>November 2023</p>
+                        <h5>Masters of Business Adminstration - <span>Cal Poly Pomona</span></h5>
+                        <p>January 2022 - December 2023</p>
                     </div>
                 </div>
                 <a href="#"><i class="ri-external-link-line"></i></a>
             </div>
             <div class="award">
                 <div>
-                    <i class="ri-javascript-line"></i>
+                    <img class="job__logo" src="https://www.cpp.edu/brand/img/thumb-vertical-stacked-bw.jpg" 
+                     alt="CPP Logo BW">
                     <div class="award__info">
-                        <h5>Code Mastery Award at <span>CodeFest</span></h5>
-                        <p>January 2023</p>
-                    </div>
-                </div>
-                <a href="#"><i class="ri-external-link-line"></i></a>
-            </div>
-            <div class="award">
-                <div>
-                    <i class="ri-award-fill"></i>
-                    <div class="award__info">
-                        <h5>Top Designer at <span>Design Awards</span></h5>
-                        <p>August 2022</p>
+                        <h5>Computer Information Systems - <span>Cal Poly Pomona</span></h5>
+                        <p>August 2017 - December 2021</p>
                     </div>
                 </div>
                 <a href="#"><i class="ri-external-link-line"></i></a>
@@ -297,16 +286,15 @@
     </section>
 
     <section class="contact">
-        <h5>Got a Projects?</h5>
-        <h2>Let's Work Together!</h2>
-        <button class="btn">Send Message</button>
-        <p>Phone: <span>+11111111111</span></p>
+        <h5>Looking for more?</h5>
+        <h2>Find me on LinkedIn!</h2>
+        <button class="btn">Click Here</button>
     </section>
 
     <footer class="footer">
         <div class="footer__brand">
             <a href="#">Logo.</a>
-            <p>© 2024 AsmrProg YouTube Channel.</p>
+            <p>© 2024 Alejandro Mariscal.</p>
         </div>
         <div class="footer__links">
             <a href="#">Home</a>
