Correct JS ref in header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.js">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+
     <title>Professional Portfolio | Mariscal</title>
 </head>
 
@@ -26,7 +28,7 @@
         <div class="navbar__actions">
             <div class="navbar__location">
                 <h5><span id="timezone"></span></h5>
-                <p><span id="utc_offset"></span><span id="abbreviation"></span></p>
+                <p><span id="utc_offset">Test</span><span id="abbreviation"></span></p>
             </div>
             <button class="btn">Contact</button>
         </div>
