--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript">
+        $(function(){
+           alert("My First jQuery Test");
+        });
+     </script>
 
     <title>Professional Portfolio | Mariscal</title>
 </head>
