--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="hero__socials">
-            <a href=""><i class="ri-instagram-line"></i></a>
+            <a href="#"><i class="ri-instagram-line"></i></a>
             <a href="#"><i class="ri-dribbble-line"></i></a>
             <a href="#"><i class="ri-linkedin-box-line"></i></a>
             <a href="#"><i class="ri-youtube-line"></i></a>
