Small Image Sizing Changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
-    <link rel="icon" type="image/x-icon" href="assets/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
@@ -195,6 +200,20 @@
                     <div class="project-card">
                         <img src="assets/proj1.png" alt="NFT Landing" class="project-card__image">
                         <div class="project-card__info">
+                            <h5>Cal Poly Pomona Redesign</h5>
+                            <p>January 2023</p>
+                        </div>
+                        <p class="project-card__desc">Led the development and redesign of over 100 pages, 
+                            ensuring visual consistency and WCAG 2.x compliance.
+                            My role included defining objectives, analyzing site analytics to improve architecture, 
+                            designing Figma wireframes, and coding bespoke components to enhance functionality. 
+                            Collaborated across departments to streamline workflows, 
+                            facilitated team progress in weekly meetings, and mentored new developers on best practices.</p>
+                        <button class="btn">View</button>
+                    </div>
+                    <div class="project-card">
+                        <img src="assets/proj1.png" alt="NFT Landing" class="project-card__image">
+                        <div class="project-card__info">
                             <h5>Deep Learning and Image Classification</h5>
                             <p>October 2021</p>
                         </div>
@@ -211,16 +230,6 @@
                         </div>
                         <p class="project-card__desc">Developed a university-based food delivery website with a focus on security and data protection, addressing
                             XSS, SSL, and SQL vulnerabilities, utilizing WAMP servers, cPanel, and GoDaddy..</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                    <div class="project-card">
-                        <img src="assets/proj3.png" alt="Crypto Market" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Citius</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Developed a minimalist run-tracking app for Android, focusing on simplicity and efficient run logging. 
-                            Built in Java, it provides a streamlined experience for runners who want to log their daily workouts. Users can record and review essential running metrics, such as distance, time, and pace, all stored in an easy-to-access daily log.</p>
                         <button class="btn">View Live Demo</button>
                     </div>
                     <div class="project-card">
