--- a/index.html
+++ b/index.html
@@ -124,68 +124,6 @@
             <section class="category">
                 <div class="category__header">
                     <div class="category__title">
-                        <i class="ri-macbook-line"></i>
-                        <h4>Portfolio Websites</h4>
-                    </div>
-                    <div class="category__desc">
-                        <p>Designing and developing eye-catching, fully responsive portfolio websites that highlight
-                            your skills and projects, ensuring a professional online presence.</p>
-                        <a href="#"><i class="ri-share-circle-line"></i></a>
-                    </div>
-                </div>
-
-                <div class="category__projects">
-                    <div class="project-card">
-                        <img src="assets/item-1.png" alt="Portfolio 1" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Portfolio-1</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                    <div class="project-card">
-                        <img src="assets/item-2.png" alt="Portfolio 2" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Portfolio-2</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                    <div class="project-card">
-                        <img src="assets/item-3.jpg" alt="Portfolio 3" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Portfolio-3</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                    <div class="project-card">
-                        <img src="assets/item-4.png" alt="Portfolio 4" class="project-card__image">
-                        <div class="project-card__info">
-                            <h5>Portfolio-4</h5>
-                            <p>August 2023</p>
-                        </div>
-                        <p class="project-card__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Sit autem soluta consequatur, sequi
-                            et sint laudantium non rem veritatis.</p>
-                        <button class="btn">View Live Demo</button>
-                    </div>
-                </div>
-
-            </section>
-
-            <section class="category">
-                <div class="category__header">
-                    <div class="category__title">
                         <i class="ri-group-2-line"></i>
                         <h4>Web and Application Development</h4>
                     </div>
@@ -198,18 +136,17 @@
 
                 <div class="category__projects">
                     <div class="project-card">
-                        <img src="assets/proj1.png" alt="NFT Landing" class="project-card__image">
+                        <img src="assets/ASIRedesign.png" alt="NFT Landing" class="project-card__image">
                         <div class="project-card__info">
-                            <h5>Cal Poly Pomona Redesign</h5>
+                            <h5>ASI Cal Poly Pomona Redesign</h5>
                             <p>January 2023</p>
                         </div>
                         <p class="project-card__desc">Led the development and redesign of over 100 pages, 
-                            ensuring visual consistency and WCAG 2.x compliance.
-                            My role included defining objectives, analyzing site analytics to improve architecture, 
-                            designing Figma wireframes, and coding bespoke components to enhance functionality. 
+                            ensuring visual consistency and WCAG 2.x compliance. Had to analyze site analytics to improve architecture, 
+                            while designing Figma wireframes, and coding bespoke components to enhance functionality. 
                             Collaborated across departments to streamline workflows, 
                             facilitated team progress in weekly meetings, and mentored new developers on best practices.</p>
-                        <button class="btn">View</button>
+                            <a href="http://asi.cpp.edu"><button class="btn">View</button></a>
                     </div>
                     <div class="project-card">
                         <img src="assets/proj1.png" alt="NFT Landing" class="project-card__image">
@@ -283,7 +220,7 @@
             <h3>Education</h3>
             <div class="award">
                 <div>
-                    <img class="job__logo" src="https://www.cpp.edu/brand/img/thumb-vertical-stacked-bw.jpg" 
+                    <img class="job__logo" src="https://media.licdn.com/dms/image/v2/C560BAQGMFtDxwGNUwA/company-logo_200_200/company-logo_200_200/0/1643221525788/cal_poly_pomona_logo?e=1744848000&v=beta&t=LAdLC2f6zago9_GuRkt-6BKyvQWXZHluhHsncLxLpyo" 
                     alt="CPP Logo BW">
                     <div class="award__info">
                         <h5>Masters of Business Adminstration - <span>Cal Poly Pomona</span></h5>
@@ -294,7 +231,7 @@
             </div>
             <div class="award">
                 <div>
-                    <img class="job__logo" src="https://www.cpp.edu/brand/img/thumb-vertical-stacked-bw.jpg" 
+                    <img class="job__logo" src="https://media.licdn.com/dms/image/v2/C560BAQGMFtDxwGNUwA/company-logo_200_200/company-logo_200_200/0/1643221525788/cal_poly_pomona_logo?e=1744848000&v=beta&t=LAdLC2f6zago9_GuRkt-6BKyvQWXZHluhHsncLxLpyo" 
                      alt="CPP Logo BW">
                     <div class="award__info">
                         <h5>Computer Information Systems - <span>Cal Poly Pomona</span></h5>
@@ -310,9 +247,8 @@
     <section class="contact">
         <h5>Looking for more?</h5>
         <h2>Find me on LinkedIn!</h2>
-        <button class="btn">Click Here</button>
-    </section>
-
+     
+        <a href="https://www.linkedin.com/in/axmariscal/"><button class="btn">View</button></a>    </section>
     <footer class="footer">
         <div class="footer__brand">
             <a href="#">Logo.</a>
