Addded a rough Dark Mode that operates from button Need to fix some bugs and made it look better.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar">
 
-        <a href="#" class="navbar__logo"><i class="ri-code-s-slash-line"></i> Logo.</a>
+        <a href="#" class="navbar__logo"><i class="ri-code-s-slash-line"></i>MARISCAL</a>
 
         <div class="navbar__menu">
             <a href="#" class="navbar__link">Home</a>
@@ -42,7 +42,7 @@
         <div class="navbar__actions">
             <div class="navbar__location">
                 <h5><span id="timezone"></span></h5>
-                <p><span id="utc_offset">Test</span><span id="abbreviation"></span></p>
+                <p><span id="utc_offset"></span><span id="abbreviation"></span></p>
             </div>
             <button class="btn" id="testButton">Contact</button>
             
@@ -62,6 +62,7 @@
             <p>Crafting intuitive and high-performance web interfaces for digital solutions.</p>
             <div class="hero__actions">
                 <button class="btn">Work With Me</button>
+                <button id="dmToggle" class="btn">Toggle Dark Mode</button>
                 <button class="btn btn--secondary">See My Portfolio</button>
             </div>
         </div>
@@ -251,7 +252,7 @@
         <a href="https://www.linkedin.com/in/axmariscal/"><button class="btn">View</button></a>    </section>
     <footer class="footer">
         <div class="footer__brand">
-            <a href="#">Logo.</a>
+            <a href="#">MARISCAL</a>
             <p>© 2024 Alejandro Mariscal.</p>
         </div>
         <div class="footer__links">
