Added some sprites that ended up not being used Create a mini game m***rio themed. Currently under a lot of development.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3>Frontend Developer Based in Los Angeles</h3>
             <p>Crafting intuitive and high-performance web interfaces for digital solutions.</p>
             <div class="hero__actions">
-                <button class="btn">Work With Me</button>
+                <a href="game.html" class="btn">Game</a>
                 <button id="dmToggle" class="btn">Toggle Dark Mode</button>
                 <button class="btn btn--secondary">See My Portfolio</button>
             </div>
@@ -87,7 +87,7 @@
                 experiences.</p>
 
             <div class="skills__actions">
-                <button class="btn">Work With Me</button>
+                <a href="/game.html"></a><button class="btn">Work With Me</button>
                 <button class="btn btn--secondary">Send Email</button>
             </div>
         </div>
