Fixed my workplace images. Created a hamburger  menu for mobile view. Added a new image for the  logo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
         <a href="#" class="navbar__logo"><i class="ri-code-s-slash-line"></i>MARISCAL</a>
 
+        <!-- Add hamburger button -->
+        <div class="navbar__hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <!-- Add mobile-menu class -->
         <div class="navbar__menu">
             <a href="#" class="navbar__link">Home</a>
             <a href="#" class="navbar__link">Projects</a>
@@ -120,7 +128,6 @@
 
         <div class="showcase__header">
             <h3>I Can Help You With:</h3>
-            <button class="btn">See My Work</button>
         </div>
 
         <div class="showcase_categories">
@@ -194,7 +201,7 @@
         <div class="career__jobs">
             <h3>Work Experience</h3>
             <div class="job">
-                <img class="job__logo" src="https://media.licdn.com/dms/image/v2/D560BAQGyNKVdJsC6GQ/company-logo_200_200/company-logo_200_200/0/1698440397174/webmd_logo?e=1739404800&v=beta&t=dj9S8VcptYSDH_EeuD4SiRcrAIo0TFOqr-9mtYHxATc" 
+                <img class="job__logo" src="assets/webmd.png" 
                      alt="WebMD Logo">
                 <div class="job__info">
                     <h5>Web Engineer at <span>WebMD</span></h5>
@@ -202,7 +209,7 @@
                 </div>
             </div>
             <div class="job">
-                <img class="job__logo" src="https://media.licdn.com/dms/image/v2/D560BAQES9Wj9N1pBlg/company-logo_200_200/company-logo_200_200/0/1712268216694/asicpp_logo?e=1739404800&v=beta&t=CzlY3QhrEazDaqcgXHVFbeEqCRzWX6HBLeq76OuHibE" 
+                <img class="job__logo" src="assets/asicpp.png" 
                      alt="ASI CPP Logo">
                 <div class="job__info">
                     <h5>Web Developer at <span>Associated Students Incorporated, CPP</span></h5>
@@ -210,7 +217,7 @@
                 </div>
             </div>
             <div class="job">
-                <img class="job__logo" src="https://media.licdn.com/dms/image/v2/C560BAQEDH0isb4Fzlg/company-logo_200_200/company-logo_200_200/0/1657030304054/mercuryhealthcare_co_logo?e=1739404800&v=beta&t=MpQr4bdiBgrmXgBI1nkr7PiyGq_hhAH5305NVmv4YAQ" 
+                <img class="job__logo" src="assets/mercuryhealthcare_co_logo.jpg" 
                      alt="Mercury Logo">
                 <div class="job__info">
                     <h5>Junior Web Engineer at <span>Mercury Healthcare</span></h5>
